--- a/requirements.txt
+++ b/requirements.txt
@@ -32,7 +32,7 @@ propcache==0.2.0
 proto-plus==1.24.0
 protobuf==5.28.2
 psycopg==3.2.3
-psycopg2==2.9.10
+psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pydantic==2.9.2
